# tmst

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.md  bootstrap.py  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py  tasks.py
lib/tmst/: __init__.py  config.py  item.py  scripts.py  shared.py
src/tmst/: __init__.py  config.py  item.py  scripts.py  shared.py
tests/: requirements.txt  test_core_python.py  test_item.py  test_simple.py
tests/cases/simple/config/: config.ini
tests/cases/simple/data/: items.json  metadata.json
tests/cases/simple/data/items/: 1.json
